--- a/scientific-thinking/_config.yml
+++ b/scientific-thinking/_config.yml
@@ -21,7 +21,7 @@
 title: Scientific Thinking
 email: jrachelh5@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A place to publish my professional works. Topics include operator's guides, testing how-to's, and other technical writing.
+  A place to publish my professional work. Topics include operator's guides, testing how-to's, and other technical writing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
