--- a/scientific-thinking/_config.yml
+++ b/scientific-thinking/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   A place to publish my professional work. Topics include operator's guides, testing how-to's, and other technical writing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: jessicarhirsch
+github_username:  jessicahirsch
 
 # Build settings
 theme: minima
