--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: jrachelh5@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to publish my professional work. Topics include operator's guides, testing how-to's, and other technical writing.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jessicahirsch.github.io/Scientific-Thinking/" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: jessicarhirsch
 github_username:  jessicahirsch
 
