fix: correct the baseurl and the url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Scientific Thinking
 email: jrachelh5@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to publish my professional work. Topics include operator's guides, testing how-to's, and other technical writing.
-baseurl: "https://jessicahirsch.github.io/Scientific-Thinking/" # the subpath of your site, e.g. /blog
-url: "https://jessicahirsch.github.io/Scientific-Thinking/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/Scientific-Thinking" # the subpath of your site, e.g. /blog
+url: "https://jessicahirsch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: jessicarhirsch
 github_username:  jessicahirsch
 
